[package]
name = "devsec"
version = "0.1.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/cyanboy/devsec"
repository = "https://github.com/cyanboy/devsec"
license = "MIT OR Apache-2.0"
keywords = ["gitlab", "devsec"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
confy = "0.6"
directories = "6.0"
indicatif = "0.17"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "chrono",
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1", features = ["full"] }